// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a confirmation alert with an icon 1`] = `
<div
  className="root type-confirmation css-134evea0 css-xbq6yp"
  style={Object {}}
>
  <i
    className="css-6o5tv90 css-1evqljd"
    color="green"
    onClick={undefined}
    size={16}
    style={Object {}}
  >
    <svg
      aria-hidden="true"
      height={16}
      width={16}
    >
      <title>
        check_circle
      </title>
      <use
        xlinkHref="#check_circle"
      />
    </svg>
  </i>
  <span
    className="css-16ef8bd0 css-1oduhpk"
    color="green"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A confirmation alert
  </span>
</div>
`;

exports[`Alert should render a warning alert 1`] = `
<div
  className="root type-warning css-134evea0 css-xbq6yp"
  style={Object {}}
>
  <span
    className="css-16ef8bd0 css-i4nqd3"
    color="orange"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A warning alert
  </span>
</div>
`;

exports[`Alert should render shallow component ok 1`] = `
<div
  className="root type-info css-134evea0 css-xbq6yp"
  style={Object {}}
>
  <span
    className="css-16ef8bd0 css-1bicsvo"
    color="blue"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A info alert
  </span>
</div>
`;
